Change the method of prediction, now it takes into account the titleInfo and the infos.

--- a/foqus-filter/Doc.ipynb
+++ b/foqus-filter/Doc.ipynb
@@ -19337,7 +19337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19346,7 +19346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19580,6 +19580,24 @@
    "source": [
     "cat_less_limit"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 362,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False])"
+      ]
+     },
+     "execution_count": 362,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
